# friday

./: .env.example  .gitignore  README.md  flake.nix  jarvis.service.example  news.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/chat-history/: SKILL.md
.claude/skills/memory-lookup/: SKILL.md
.claude/skills/proactive-checkin/: SKILL.md
.claude/skills/scheduling/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.claude/skills/skill-creator/references/: frontmatter.md
jarvis/: __init__.py  claude_runner.py  cron.py  main.py  memory.py  message_store.py  platform.py  session_logger.py  telegram.py  voice.py  whatsapp.py
scripts/: proactive_checkin.py  resubscribe_waba.py  run_cronjob.sh  run_proactive_checkin.sh  scheduled_task.py  setup_telegram_webhook.py
